--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
             <a href="#work">Work</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="images\Resume Gabriel Reches.pdf">Resume</a>
           </li>
           <li>
             <a href="#contact-me">Contact Me</a>
@@ -55,9 +55,9 @@
             </h2>
 
         <div class="pages">
-            <article class="page">
-                <div class="page-img page-1">
-                    <div>
+            <article class="page">  
+                <div class="page-img page-1"> <a href="https://grech17.github.io/week-1-refactor/"><div class="page-1"></div></a>
+                    <div class="page-text">
                         <h3>Surf Report</h3>
                         <h4>MERN Stack</h4>
                     </div>   
@@ -66,7 +66,7 @@
 
             <article class="page">
                 <div class="page-img page-2">
-                    <div>
+                    <div class="page-text">
                         <h3>LED Wall</h3>
                         <h4>Node/IoT</h4>
                     </div>   
@@ -75,7 +75,7 @@
 
             <article class="page">
                 <div class="page-img page-3">
-                    <div>
+                    <div class="page-text">
                         <h3>Calculator</h3>
                         <h4>React/Javascript/CSS</h4>
                     </div>   
@@ -84,7 +84,7 @@
 
             <article class="page">
                 <div class="page-img page-4">
-                    <div>
+                    <div class="page-text">
                         <h3>Pastel Puzzels</h3>
                         <h4>MERN Stack</h4>
                     </div>   
@@ -93,7 +93,7 @@
 
             <article class="page">
                 <div class="page-img page-5">
-                    <div>
+                    <div class="page-text">
                         <h3>Run Buddy</h3>
                         <h4>HTML/CSS</h4>
                     </div>   
@@ -108,24 +108,25 @@
             <h2 class="section-title primary-border">
                 Contact Me
             </h2>
-        </div>
 
         <div class="contact-sheet">
             <ul>
                 <li>
-                  <a href="#phone">Phone</a>
+                  <a href="tel:8182096766">Phone</a>
                 </li>
                 <li>
-                  <a href="#email">Email</a>
+                  <a href="mailto:gireches@gmail.com">Email</a>
                 </li>
                 <li>
-                  <a href="#linkdin">Linkdin</a>
+                  <a href="https://www.linkedin.com/in/gir98/">Linkedin</a>
                 </li>
                 <li>
-                  <a href="#github">GitHub</a>
+                  <a href="https://www.linkedin.com/in/gir98/">GitHub</a>
                 </li>
               </ul>
+        </div>      
         </div>
+    </section>
 </body>
 
 </html>        
