--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
             <a href="#about-me">About Me</a>
           </li>
           <li>
-            <a href="#work">Work</a>
+            <a href="#work">Works</a>
           </li>
           <li>
             <a href="images\Resume Gabriel Reches.pdf">Resume</a>
