added music finder

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
             </div>          
         </a>
 
+        <a href="https://evanteems.github.io/Musix-Genre/"
+        class="grid-item music-search">
+          <div>
+            <h3>Music Finder</h3>
+            <span>JavaScript</span>
+          </div>
+        </a>
+
      </div>
     </section>   
 
