changed about me

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h2>About Me</h2>
         <div>
          <p>
-          Gabriel here - thanks for stopping by. Below you will find a body of work created by me while attending Trilogy's Coding Bootcamp. This is just the first of many projects to come. 
+          Gabriel here - thanks for stopping by. Below you will find a body of work created by me while attending UCLA's Coding Bootcamp. This is just the first of many projects to come. 
          </p>
         </div>            
     </section>
