added 2nd project

--- a/index.html
+++ b/index.html
@@ -78,14 +78,6 @@
                 </div>          
         </a>   
 
-        <a href="https://github.com/GRech17/Team-Profile-Generator" 
-        class="grid-item team-generator">
-            <div>
-                <h3>Work Team Generator</h3>
-                <span>MERN Stack<span>
-            </div>          
-        </a>
-
         <a href="https://note-taker-17-app.herokuapp.com/notes" 
         class="grid-item note-taker">
             <div>
@@ -93,6 +85,16 @@
                 <span>JavaScript/Node<span>
             </div>          
         </a>
+
+        <a href="https://movie-thumbs.herokuapp.com/" 
+        class="grid-item movie-lists">
+            <div>
+                <h3>Movie Lists</h3>
+                <span>SQL/JavaScript/Handlebars<span>
+            </div>          
+        </a>
+
+        
 
      </div>
     </section>   
